# update-suchef-orders-bot

./: .env  Dockerfile  main.py  pyproject.toml  requirements.txt
migration/: env.py
migration/versions/: 2024_12_18_2034-a964e4ba43d3_initial_revision.py  2025_01_30_2014-11dfe94d4ef8_initial_revision.py  2025_01_30_2016-02735b2e9853_set_created_at_field.py  2025_01_31_1517-d3d18aea6c97_remove_created_at_field.py
prompts/: checker_prompt.txt  decision_prompt.txt  generation_prompt.txt  order_status_prompt
src/: config.py  utils.py
src/ai_agent/: agent.py  state.py  utils.py
src/apis/: __init__.py  base.py  bonus_api.py  chat_api.py  order_api.py  orders_api.py  promo_api.py  schemas.py
src/app/: app.py  bot.py  container.py  lifespan.py  logger.py  run.py
src/broadcast/: broadcast.py  logger.py  process.py  send.py  sender.py
src/database/: __init__.py  base.py  context.py  database_manager.py  logger.py  manager.py  provider.py
src/dto/: __init__.py  bonus_dto.py  orders_dto.py  promo_dto.py
src/http/: __init__.py  abc.py  base.py  base_http.py  client.py  http_client.py  http_requests.py  requests.py
src/message/: __init__.py  abc.py  base.py  bonus.py  flyers.py  message.py  order.py  order_status.py  statuses.py
src/messages/: __init__.py  base.py  bonus.py  order.py  promo.py
src/misc/: file_loaders.py  file_readers.py  formatters.py  validators.py
src/orders_sender/: consumer.py  processor.py  run.py  sender.py
src/presenters/: __init__.py  order_status_factory.py  order_status_presenter.py
tg_message/: base.py  order_status.py
(+158 files in other folders)
